--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@ Assets/Plugins/Editor/JetBrains.meta
 Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
 
 Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll.meta
+Temp/UnityLockfile
+Temp/UnityLockfile
+Temp/UnityLockfile
