--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
 Temp/UnityLockfile
 Temp/UnityLockfile
 Temp/UnityLockfile
+Library/CurrentMaximizeLayout.dwlt
